--- a/q/174116.html
+++ b/q/174116.html
@@ -26,18 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>058</td><td>Perl 5 lF</td><td>241003T172219Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/275925#275925">Xcali</a></td></tr>
-<tr d-ix="1"><td>010</td><td>Japt</td><td>181016T225943Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174152#174152">Shaggy</a></td></tr>
-<tr d-ix="2"><td>008</td><td>05AB1E legacy</td><td>181016T151647Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174128#174128">Kevin Cr</a></td></tr>
-<tr d-ix="3"><td>134</td><td>C</td><td>181018T193957Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174280#174280">J. Knobl</a></td></tr>
-<tr d-ix="4"><td>065</td><td>Ruby</td><td>181018T094058Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174248#174248">Asone Tu</a></td></tr>
-<tr d-ix="5"><td>084</td><td>Ruby</td><td>181018T092848Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174247#174247">G B</a></td></tr>
-<tr d-ix="6"><td>095</td><td>Powershell</td><td>181017T205750Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174231#174231">mazzy</a></td></tr>
-<tr d-ix="7"><td>068</td><td>R</td><td>181016T151015Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174127#174127">digEmAll</a></td></tr>
-<tr d-ix="8"><td>nan</td><td>I have two solutions to the problem. The first solution I did first then I thought of another way to do it that I thought would save bytes but it didn't so I included it anyway.</td><td>181016T201334Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174144#174144">Mic1780</a></td></tr>
-<tr d-ix="9"><td>023</td><td>K  Kona</td><td>181017T152317Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174206#174206">Alex Shr</a></td></tr>
-<tr d-ix="10"><td>026</td><td>J</td><td>181016T132902Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174121#174121">Galen Iv</a></td></tr>
-<tr d-ix="11"><td>153</td><td>Red</td><td>181017T110546Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174178#174178">Galen Iv</a></td></tr>
+<tr d-ix="0"><td>147</td><td>Red</td><td>181017T110546Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174178#174178">Galen Iv</a></td></tr>
+<tr d-ix="1"><td>058</td><td>Perl 5 lF</td><td>241003T172219Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/275925#275925">Xcali</a></td></tr>
+<tr d-ix="2"><td>010</td><td>Japt</td><td>181016T225943Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174152#174152">Shaggy</a></td></tr>
+<tr d-ix="3"><td>008</td><td>05AB1E legacy</td><td>181016T151647Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174128#174128">Kevin Cr</a></td></tr>
+<tr d-ix="4"><td>134</td><td>C</td><td>181018T193957Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174280#174280">J. Knobl</a></td></tr>
+<tr d-ix="5"><td>065</td><td>Ruby</td><td>181018T094058Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174248#174248">Asone Tu</a></td></tr>
+<tr d-ix="6"><td>084</td><td>Ruby</td><td>181018T092848Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174247#174247">G B</a></td></tr>
+<tr d-ix="7"><td>095</td><td>Powershell</td><td>181017T205750Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174231#174231">mazzy</a></td></tr>
+<tr d-ix="8"><td>068</td><td>R</td><td>181016T151015Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174127#174127">digEmAll</a></td></tr>
+<tr d-ix="9"><td>nan</td><td>I have two solutions to the problem. The first solution I did first then I thought of another way to do it that I thought would save bytes but it didn't so I included it anyway.</td><td>181016T201334Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174144#174144">Mic1780</a></td></tr>
+<tr d-ix="10"><td>023</td><td>K  Kona</td><td>181017T152317Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174206#174206">Alex Shr</a></td></tr>
+<tr d-ix="11"><td>026</td><td>J</td><td>181016T132902Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174121#174121">Galen Iv</a></td></tr>
 <tr d-ix="12"><td>021</td><td>Pyth</td><td>181017T090255Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174174#174174">Sok</a></td></tr>
 <tr d-ix="13"><td>090</td><td>Python 2</td><td>181016T133832Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174123#174123">TFeld</a></td></tr>
 <tr d-ix="14"><td>023</td><td>APL Dyalog Classic</td><td>181017T071630Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174170#174170">Galen Iv</a></td></tr>
@@ -55,13 +55,43 @@
 <tr d-ix="26"><td>155</td><td>MBASIC</td><td>181016T134231Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174125#174125">wooshiny</a></td></tr>
 <tr d-ix="27"><td>016</td><td>Japt</td><td>181016T150659Z</td><td><a href="https://codegolf.stackexchange.com/questions/174116/print-a-wavy-string-line-by-line/174126#174126">ETHprodu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-lF</code>, 58 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="http://www.red-lang.org" rel="nofollow noreferrer">Red</a>, 147 bytes</h1>
+<pre><code>func[s n][i: v: m: 1 foreach k sort collect[forall s[keep/only reduce[v i s/1]v: v + m
+if all[n &gt; 1(i: i + 1)%(n - 1)= 1][m: 0 - m]]][prin last k]]
+</code></pre>
+<p><a href="https://tio.run/##PY7LasMwEEX3/oqLIJBSSqrmUTA0H9Gt0MLII0dYr0qyS/LzropoZzPMmcucSTRunzQK2el@04tXIsNLYXqsPVwPDh0SDeqGGTmkAhWsJVVExYO1yGImiofg7R2JxkWRWGGQD1zWAyue4TqjUaPC4wq@r5dNpfxpt/d4qf0DXIpqeq2Tk1KKmIyHHXLBLOX2p29/dajFYgpTGpwzforL42EpM5zbSoWRpmA1w7EBshRvgy8Mpwb42/F0vrz/B76@KZX7YkJk4F3TF2j8@rrtBw" rel="nofollow noreferrer" title="Red – Try It Online">Try it online!</a></p>
+<h1><a href="http://www.red-lang.org" rel="nofollow noreferrer">Red</a>, 153 bytes</h1>
+<pre><code>func[s n][i: v: m: 1 b: collect[foreach c s[keep/only reduce[v i c]v: v + m
+if all[n &gt; 1(i: i + 1)%(n - 1)= 1][m: -1 * m]]]foreach k sort b[prin last k]]
+</code></pre>
+<p><a href="https://tio.run/##VYzNSgMxFIX38xSHgUJVisS2CoH6EG5DFmnmZhomfyaZkfblx7jQ4upyvnPul2lYP2gQsjN8NXPQoiBIYTkWDs/BcObQ0TnSVZiYSekLNIqYiNJzDO6KTMOsSSyw0LJ9LXiC76yBck4EvINtm842yh4224BduycwKZp@x/AIL6X8VU8oMVecRco2wKlSMUm5/qQKgz7lOGblvQ1jmm83R6XHsfurdRxojM702N8hOUoXFWqPwx2yl/3h@Pr2b/j5RbleZxtTD9at3w" rel="nofollow noreferrer" title="Red – Try It Online">Try it online!</a></p>
+<h2>Explanation:</h2>
+<pre><code>f: func [ s n ] [                      ; s is the string, n is the height
+    i: 1                               ; index of the current character in the string
+    v: 1                               ; value of the &quot;ladder&quot;
+    m: 1                               ; step (1 or -1)
+    b: collect [                       ; collect the values in a block b
+        foreach c s [                  ; foreach character in the string 
+            keep/only reduce [ v i c ] ; keep a block of the evaluated [value index char] 
+            i: i + 1                   ; increase the index
+            v: v + m                   ; calculate the value 
+            if all [ n &gt; 1             ; if height is greater than 1 and
+                    i % (n - 1) = 1    ; we are at a pick/bottom of the ladder
+                   ]
+                [ m: -1 * m ]          ; reverse the step
+        ]
+    ]
+    foreach k sort b [ prin last k ]   ; print the characters in the sorted block of blocks
+]
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-lF</code>, 58 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>$#a=&lt;&gt;-1;map$_.=shift@F,@a,reverse@a[1..@a-2]while@F;say@a
 </code></pre>
 <p><a href="https://tio.run/##K0gtyjH9/19FOdHWxk7X0Do3sUAlXs@2OCMzrcTBTcchUacotSy1qDjVITHaUE/PIVHXKLY8IzMn1cHNujix0iHx//9wxxDXIF9XH38/LpN/@QUlmfl5xf91fU31DAwN/uvmuAEA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>12</s> <s>11</s> 10 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>12</s> <s>11</s> 10 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p>Dunno why I deleted this! It was a long time ago.</p>
 <pre><code>ñÏgVo ê ÅÔ
 </code></pre>
@@ -77,7 +107,7 @@
 </code></pre>
 <p><strong>Note:</strong> If <code>V=1</code> then <code>Vo</code> will produce an empty array and the function will return undefined for each character, preserving the original order of the string.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E (legacy)</a>, <s>11</s> 8 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E (legacy)</a>, <s>11</s> 8 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Σ²Lû¨¾è¼
 </code></pre>
 <p>Inspired by <a href="https://codegolf.stackexchange.com/a/174122/52210"><em>@LuisMendo</em>'s MATL answer</a>.<br />
@@ -99,7 +129,7 @@
 </code></pre>
 <p>NOTE: The <code>counter_variable</code> is used, because in the Python Legacy version of 05AB1E, the <code>Σ</code> didn't had an index <code>N</code>, which it does have in the new Elixir rewrite version of 05AB1E. So why do I still use the Legacy version? Because in the Elixir rewrite it has a bug and doesn't sort for <span class="math-container">\$n=1\$</span>, which would all result in an empty list <code>[]</code> after the indexing. All other test cases work as intended with <code>Σ²Lû¨Nè</code>: <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfWVC6P9ziyN8Du8@tMLv8Ir/tTr/o6OVwh1DXIN8XX38/ZR0jGN1FFBFTMAiBUX56UWJubmZeekFpVVVOanFSjqmYJnk/JTU9PycNJje1JzUgozEvBKYTkMjYxNTM3OQdCwA" rel="nofollow noreferrer">try it online</a>, but the test case with <span class="math-container">\$n=1\$</span> times out without result, even with <code>--no-lazy</code> argument flag: <a href="https://tio.run/##ASwA0/9vc2FiaWX//86jwrJMw7vCqE7DqP//cXdlcnR5dWlvcAox/y0tbm8tbGF6eQ" rel="nofollow noreferrer">try it online</a>.</p>
 </div>
-<div id="pu3" class="pu"><h1>C, <s>142</s> 134 bytes</h1>
+<div id="pu4" class="pu"><h1>C, <s>142</s> 134 bytes</h1>
 
 <p><em>8 bytes saved thanks to Jonathan Frech</em></p>
 
@@ -129,7 +159,7 @@ t;i;j;d;f(s,n)char*s;{
 
 <p><a href="https://ideone.com/yxer15" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>75</s> 65 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>75</s> 65 bytes</h1>
 
 
 
@@ -148,7 +178,7 @@ t;i;j;d;f(s,n)char*s;{
 <li>Return all the strings joined together</li>
 </ul>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 84 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 84 bytes</h1>
 
 
 
@@ -157,7 +187,7 @@ t;i;j;d;f(s,n)char*s;{
 
 <p><a href="https://tio.run/##ZY7NaoNAFEb3PoVZjVq9aNS0RQx0kV2SQih0MczCmPEHxnGYidSoeXZrSa2LLu8558Inm/NtzOLR2Sqb9zLGCBGLR9hyAYDblrF2uAngeASqRPRDO0jcQnJW5ClWoFiZ0pXhmsOA0P2rKBnVFXZJJK3pHg0PIDDnR9FclZ5h9Pn2sTsddvv3I7L1lty1H6HNVsg6l0lVlTwXTdcxqqYqJH8@rS80r1k2UX@hlFFRJPw60WCh3toPws3zkmqGDxD@W@T@hi@vj0XjNw" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1>Powershell, <s>99</s> 95 bytes</h1>
+<div id="pu7" class="pu"><h1>Powershell, <s>99</s> 95 bytes</h1>
 
 
 
@@ -220,7 +250,7 @@ and removes adjacent duplicates. <code>gu</code> is alias for <a href="https://d
 <p>The expression <code>$i++*($n-gt1)</code>
 returns an index in the deduplicated sequence. <code>=$i++</code> if <code>$n&gt;1</code>, otherwise <code>=0</code></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, 68 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, 68 bytes</h1>
 
 
 
@@ -236,7 +266,7 @@ returns an index in the deduplicated sequence. <code>=$i++</code> if <code>$n&gt
 <li>-3 bytes thanks to @JayCe</li>
 </ul>
 </div>
-<div id="pu8" class="pu"><p>I have two solutions to the problem. The first solution I did first then I thought of another way to do it that I thought would save bytes but it didn't so I included it anyway.</p>
+<div id="pu9" class="pu"><p>I have two solutions to the problem. The first solution I did first then I thought of another way to do it that I thought would save bytes but it didn't so I included it anyway.</p>
 
 <hr>
 
@@ -280,14 +310,14 @@ echo join($a);
 
 <p><a href="https://tio.run/##VY1BC8IgAEb/yg4fY2MYa9DJuX6I7CCxnOJUtDos@u1m4aFuj8eD51ef0nj2q68QGUSQD36cKWzhIbNh8RbMYhvEll5daKBYT6FGGNo@v0J/hB5h67p4CA7ddfOBIXKoTLSUsGTI8dT/t4T8tq/lsrpKO5WvoqUpJR@cDGLblJX@vu9mien0Bg" rel="nofollow noreferrer" title="PHP – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu9" class="pu"><h1>K ( <a href="https://github.com/kevinlawler/kona" rel="nofollow noreferrer">Kona</a> ), 23 bytes</h1>
+<div id="pu10" class="pu"><h1>K ( <a href="https://github.com/kevinlawler/kona" rel="nofollow noreferrer">Kona</a> ), 23 bytes</h1>
 
 <p>A translation of the <a href="https://codegolf.stackexchange.com/a/174121/18872">J answer by Galen</a></p>
 
 <pre><code>{y@&lt;(#y)#-1_(!x),|!x-1}
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, <strike>54, 29, 27</strike> 26 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, <strike>54, 29, 27</strike> 26 bytes</h1>
 
 <p>-1 byte thanks to hoosierEE</p>
 
@@ -295,35 +325,6 @@ echo join($a);
 </code></pre>
 
 <p><a href="https://tio.run/##bYzBCoJAFEX3fsWjgkmIQVMLHgnzH1OLSd@oMTriGIHkt08ULly0Pefe8/Da5RwiQIj8Xl5xK@RO4oxv0aC4oLiFgCh9GGw4MJ1zBgeYEbQLAipqC@ylRhpaMrZjoCH5S9OF9oOtBtW2TVf1z2ky5L42W2xhS6qs0esOGepr1Y3rSnxM0ux0Xs/UvSjpd4z9Bw" rel="nofollow noreferrer" title="J – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu11" class="pu"><h1><a href="http://www.red-lang.org" rel="nofollow noreferrer">Red</a>, 153 bytes</h1>
-
-<pre><code>func[s n][i: v: m: 1 b: collect[foreach c s[keep/only reduce[v i c]v: v + m
-if all[n &gt; 1(i: i + 1)%(n - 1)= 1][m: -1 * m]]]foreach k sort b[prin last k]]
-</code></pre>
-
-<p><a href="https://tio.run/##VYzNSgMxFIX38xSHgUJVisS2CoH6EG5DFmnmZhomfyaZkfblx7jQ4upyvnPul2lYP2gQsjN8NXPQoiBIYTkWDs/BcObQ0TnSVZiYSekLNIqYiNJzDO6KTMOsSSyw0LJ9LXiC76yBck4EvINtm842yh4224BduycwKZp@x/AIL6X8VU8oMVecRco2wKlSMUm5/qQKgz7lOGblvQ1jmm83R6XHsfurdRxojM702N8hOUoXFWqPwx2yl/3h@Pr2b/j5RbleZxtTD9at3w" rel="nofollow noreferrer" title="Red – Try It Online">Try it online!</a></p>
-
-<h2>Explanation:</h2>
-
-<pre><code>f: func [ s n ] [                      ; s is the string, n is the height
-    i: 1                               ; index of the current character in the string
-    v: 1                               ; value of the "ladder"
-    m: 1                               ; step (1 or -1)
-    b: collect [                       ; collect the values in a block b
-        foreach c s [                  ; foreach character in the string 
-            keep/only reduce [ v i c ] ; keep a block of the evaluated [value index char] 
-            i: i + 1                   ; increase the index
-            v: v + m                   ; calculate the value 
-            if all [ n &gt; 1             ; if height is greater than 1 and
-                    i % (n - 1) = 1    ; we are at a pick/bottom of the ladder
-                   ]
-                [ m: -1 * m ]          ; reverse the step
-        ]
-    ]
-    foreach k sort b [ prin last k ]   ; print the characters in the sorted block of blocks
-]
-</code></pre>
 </div>
 <div id="pu12" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, <s>22</s> 21 bytes</h1>
 <pre><code>|seMhD,V*lz+PUQP_UQzz
