--- a/q/275590.html
+++ b/q/275590.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>174</td><td>C GCC using OSS</td><td>240921T162403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275674#275674">G. Sliep</a></td></tr>
-<tr d-ix="1"><td>228</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
-<tr d-ix="2"><td>2302</td><td>Zsh +ffplay</td><td>240923T094444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275717#275717">roblogic</a></td></tr>
-<tr d-ix="3"><td>324</td><td>JavaScript</td><td>240920T204734Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275664#275664">rougepie</a></td></tr>
+<tr d-ix="0"><td>307</td><td>JavaScript</td><td>240920T204734Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275664#275664">rougepie</a></td></tr>
+<tr d-ix="1"><td>174</td><td>C GCC using OSS</td><td>240921T162403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275674#275674">G. Sliep</a></td></tr>
+<tr d-ix="2"><td>228</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
+<tr d-ix="3"><td>2302</td><td>Zsh +ffplay</td><td>240923T094444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275717#275717">roblogic</a></td></tr>
 <tr d-ix="4"><td>320</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
 <tr d-ix="5"><td>nan</td><td>CP1610 machine code</td><td>240919T013051Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275627#275627">Arnauld</a></td></tr>
 <tr d-ix="6"><td>270</td><td>Javascript</td><td>240920T193816Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275663#275663">ccprog</a></td></tr>
@@ -37,7 +37,22 @@
 <tr d-ix="8"><td>290</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
 <tr d-ix="9"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>C (GCC) using OSS, <s>201</s> <s>197</s> <s>177</s> 174 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript, <s>324</s> 307 bytes</h1>
+<p>I used an array containing as many elements as there are notes to play, making sure that each element can be represented by a single hexadecimal character.</p>
+<p>This character represents a number of semitones of difference between this note and the previous note (except for the first element which is played as is)</p>
+<p>I then realized that some big chunks were repeated (those corresponding to the arpeggios in add2 and Maj7) and that I could factorize these portions of code</p>
+<p>EDIT: with the suggestion from @G.Sliepen, @Neil, @Arnauld and @Fhuvi, I got a 307 bytes. Thanks guys!</p>
+<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false" data-babel-preset-react="false" data-babel-preset-ts="false">
+<div class="snippet-code">
+<pre class="snippet-code-js lang-js prettyprint-override"><code>f=
+
+_=&gt;{a=new AudioContext;with(a.createOscillator(r=(s,n=4)=&gt;(""+s).repeat(n))){[...`6${b=r("889b")+r(1344,c=3)+134}1${d=r("87ab")+r(1254,3)+125}7${b+1+d+0+b+6+b}5${D=r("a9a7")+r(5232,3)+523}4`+D].map((u,i)=&gt;{frequency.setValueAtTime(110*2**(c/12),i/5);c+="0x"+u-6});connect(a.destination);start();stop(51.2)}}</code></pre>
+<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;button type="button" onclick="f()"&gt;Play (Warning: Loud)&lt;/button&gt;</code></pre>
+</div>
+</div>
+</p>
+</div>
+<div id="pu1" class="pu"><h1>C (GCC) using OSS, <s>201</s> <s>197</s> <s>177</s> 174 bytes</h1>
 <pre><code>i;main(c,n,a){for(open(&quot;/dev/dsp&quot;,1);write(3,&amp;n,1);n=(a+=901*exp2(n/4+(&quot;047;02470237&quot;[n%4+(5732&gt;&gt;c*2&amp;12)]-&quot;,/,/310.&quot;[c])/12.))&gt;&gt;9)n=i++/1500,c=n/32%8,n%=32,n=n&gt;16?32-n:n;}
 </code></pre>
 <p>The score includes 3 bytes for the <code>-lm</code> compiler flag. It runs on any UNIX system with support for the Open Sound System (OSS), or any other sound system that provides compatibility with OSS. On modern Linux, you might have to <code>sudo modprobe snd_pcm_oss</code> if this is not done automatically already. If you compile with GCC 14 or later, you might need to pass the <code>-std=gnu89</code> flag, but earlier versions don't need it.</p>
@@ -57,7 +72,7 @@
 <p>It then calculates the change in phase per sample for the waveform at that frequency in fixed point format, and adds it to the phase accumulator  <code>a</code>. This is then converted to a byte to be send straight to the audio device, thus generating a sawtooth wave with the right frequency.</p>
 <p>This version loops (for at least six days). To make it write the output to <code>stdout</code> instead of <code>/dev/dsp</code>, change the first <code>3</code> in the code to a <code>1</code>. You can then pipe it through <code>aplay -fU8 -c1 -r8000</code> or a similar command.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, <sub><s>677</s></sub> <sub><s>303</s></sub> <sub><s>280</s></sub> <sub><s>241</s></sub> 228 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, <sub><s>677</s></sub> <sub><s>303</s></sub> <sub><s>280</s></sub> <sub><s>241</s></sub> 228 bytes</h1>
 <pre class="lang-basic prettyprint-override"><code>dim m(20):d$=&quot;GIKNDFGKGIKNDFGK@BDGBDFICGJNEILP&quot;:for k=0to 7
 for i=0to 4:for o=1to 4:m(o+4*i)=555*2^(asc(mid$(d$,k*4+o))/12+i-8):next:next
 for i=1to 17:s(m(i)):next:for i=1to 16:s(m(17-i)):next:next
@@ -85,7 +100,7 @@ sub s(x):sound x,.2,50:return
 </code></pre>
 <p><sub><s><a href="https://github.com/roblogic/golf/blob/46d9ed8a30eaa2785bd216b5188800784a5be9eb/basic/275590-play-the-final-fantasy-prelude.bas" rel="nofollow noreferrer">677 bytes</a></s></sub></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +<a href="https://www.ffmpeg.org/ffplay.html" rel="nofollow noreferrer"><code>ffplay</code></a>, <sub><s>296</s></sub> <sub><s>241</s></sub> <sub><s>261</s></sub> 230 bytes x 2</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +<a href="https://www.ffmpeg.org/ffplay.html" rel="nofollow noreferrer"><code>ffplay</code></a>, <sub><s>296</s></sub> <sub><s>241</s></sub> <sub><s>261</s></sub> 230 bytes x 2</h1>
 <pre class="lang-bash prettyprint-override"><code>for z (GIKN DFGK GIKN DFGK @BDG BDFI CGJN EILP){W=
 for i ({0..4})for o (${(s::)z})W+=($[555*2**(##$o/12.+i-8)])
 for q (${W:0:18} ${(Oa)W:0:17})S+=between(t,$[p++]/5,$p/5)*$q+
@@ -102,21 +117,6 @@ for q (${W:0:18} ${(Oa)W:0:17})S+=between(t,$[p++]/5,$p/5)*$q+
 Finally, we call <code>ffplay</code> using the string <code>S</code> (trailing <code>+</code> truncated).</p>
 <p>The linked TIO example doesn't play sound (no <code>ffplay</code>), but you can see the humungous string <code>S</code>.</p>
 <p><sub><a href="https://tio.run/##TVDRasJAEHzPVyzxxNs7E3OhQUkJFGsNqcUKPvhgfbhKggfBxCRYNNy3x8QW7Muyw8zODHstD41MlSwhSfJUXoJ4f8iaJCvgCjSMFkuYzcMFPLaX6SyE6WwewWv4voS36GOF9SYwuhMFtHZs@0ljhzKgpKal7@NVY20A5IU6VgmQba9HMmssuHCZ2n2BabbkhgeUbD3PYy5jtFOMhGtzZU1wh4Y2ul73kEtnu/EdX0w0/lmafVu0E8jloTv900Fb5FPiHY01rnnwHVc/cXyk1ZBsc853I29I8pGHjJy4oZ9/nwFWAqk8JwpkfJZpWewDc@DYgpXqSF22iljF2pB1n2vEgdk0Nw" rel="nofollow noreferrer">Debug</a> <s><a href="https://tio.run/##NY89b4MwGIT3/AqLuoltwocdFwsCQ8ZOVGJgQEgx1FZIUCAhStUifjuBNp1Op3vf53Q/3WGUdSU7oHVby@9IlYdm1M0VVADtdVN/AouGYSj8QnFPFP/qMi4Y9/yNkOrNL/eAunhnRghm1HuBlSVyvJgpJ4B617bFgPt4SvtdAE@EB3zAII22z575YjPg2R0nR217ytNfGoyzY25SRqon8AImShq4gUUHAHsUS5xOrxHMOHcJIwQheLEYxQ5lNs6XyySCiVGo25dSZ3RbGzBrTTM3HLGGrSMwgdo0tsPibz6wNKjlXVdAqrusu2sZGSvXpqSrzoiRj3dyI1N/8moOGK@McXwA" rel="nofollow noreferrer" title="Zsh – Try It Online">296B</a></s> <s><a href="https://tio.run/##RY@9boMwFIX3PMVV6iq@dgDb4SdQ8QCdWomBIc1gkEmQUCABJSrIz05DO3Q7Z/i@ozP251k3te6hqrpGf6emPLdz1d5gBBrFhQE/jAr4T0L5ESg/jGEXaQNBXJ5wytPVgtRAJ@G6O4tLa4GSifZJgqPFnKeUHKJAMMUYpTJ8IVPrnTwprKP2XCpWoyeVi0f8VV0XOE9E4kgLT82HxtxilpLsqzDDw5gLHbbk0HF@9IIt6bwAGbnylX37@wFOBY2@VzVoc9dNfyvT9Ua4kvX1hSr2@c4G9lzIXrlF3Kzn@Qc" rel="nofollow noreferrer">241B</a></s> <s><a href="https://tio.run/##RY/PaoNAGMTveYqPdEv2203U3finpvoAPbWQgwcRXGVNBIkmSkqVfXZr0kNvM8xvYGbsz7NqatVDVXWN@ol1eW7nkmIURST1PIdJxigV/gsRO/nGhWREoi2khdmqam8wAg3CQoPrBwX8K0e6AUjXD2EfKA1eWJ5wSuJnpQY6OZa1N/hwLVAy0f5wwNFgwmOal0Cm1j7ZwjFA6hyfpeuCJfDIxlRk4OYLRD8VJgaPPC708K31hQ5bknacZ7a3JZ3tISNXvjLvf99gV0Gj7lUNSt9V09/KeL1xLMH6@kIl@/pgA1u2HF@5Qdys5/kX" rel="nofollow noreferrer">261B</a></s></sub></p>
-</div>
-<div id="pu3" class="pu"><h1>JavaScript, 324 bytes</h1>
-<p>I used an array containing as many elements as there are notes to play, making sure that each element can be represented by a single hexadecimal character.</p>
-<p>This character represents a number of semitones of difference between this note and the previous note (except for the first element which is played as is)</p>
-<p>I then realized that some big chunks were repeated (those corresponding to the arpeggios in add2 and Maj7) and that I could factorize these portions of code</p>
-<p>EDIT: I save some extra bytes by fixing the melody (thx @G.Sliepen ) and starting with <code>c=3</code> and using <code>110*2**(c/12)</code> to compute the frequency (thx @Neil). Thank to @Arnauld and @Fhuvi too!</p>
-<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
-<div class="snippet-code">
-<pre class="snippet-code-js lang-js prettyprint-override"><code>f=
-
-_=&gt;{a=new AudioContext();with(a.createOscillator()){c=3;[...`6${b="889b889b889b889b134413441344134"}1${d="87ab87ab87ab87ab125412541254125"}7${b}1${d}0${b}6${b}5${D="a9a7a9a7a9a7a9a7523252325232523"}2${D}`].map((u,i)=&gt;{frequency.setValueAtTime(110*2**(c/12),i*.19);c+=("0x"+u-6)});connect(a.destination);start();stop(48.64)}}</code></pre>
-<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;button type="button" onclick="f()"&gt;Play (Warning: Loud)&lt;/button&gt;</code></pre>
-</div>
-</div>
-</p>
 </div>
 <div id="pu4" class="pu"><h1>JavaScript, 320 bytes</h1>
 <p>I don't golf with JavaScript much so I'm sure there's a lot of opportunities for golfing here. Should work on most browsers.</p>
