--- a/q/275909.html
+++ b/q/275909.html
@@ -26,15 +26,27 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>009</td><td>05AB1E</td><td>241004T070008Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275935#275935">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>009</td><td>APLDyalog Unicode</td><td>241003T083724Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275913#275913">akamayu</a></td></tr>
-<tr d-ix="2"><td>009</td><td>Vyxal</td><td>241003T094230Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275915#275915">emanresu</a></td></tr>
+<tr d-ix="0"><td>008</td><td>Vyxal</td><td>241003T094230Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275915#275915">emanresu</a></td></tr>
+<tr d-ix="1"><td>009</td><td>05AB1E</td><td>241004T070008Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275935#275935">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>009</td><td>APLDyalog Unicode</td><td>241003T083724Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275913#275913">akamayu</a></td></tr>
 <tr d-ix="3"><td>044</td><td>JavaScript ES6</td><td>241003T025930Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275911#275911">Arnauld</a></td></tr>
 <tr d-ix="4"><td>041</td><td>Ruby</td><td>241003T091617Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275914#275914">G B</a></td></tr>
 <tr d-ix="5"><td>015</td><td>Uiua 0.13.0dev.2</td><td>241003T002534Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275910#275910">Tbw</a></td></tr>
 <tr d-ix="6"><td>018</td><td>Charcoal</td><td>241003T055940Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275912#275912">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 9 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, <s>9</s> 8 bytes</h1>
+<pre><code>2ʀ*Ṙε¡ƒ/
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCIyyoAq4bmYzrXCocaSLyIsIiIsIjRcbjMiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
+<p>Getting the inputs to work nicely was annoying, and it's likely that there's a byte to be shaved here (I wish vysearch was a thing). Same formula as everyone else. -1 inspired by Kevin Cruijssen's 05AB1E answer.</p>
+<pre><code>2ʀ       # [0, 1, 2]
+  *Ṙ     # [2n, n, 0]
+    ε    # [2n-k, n-k, k]
+     ¡   # Factorial of each
+      ƒ/ # (2n-k)! / (n-k)! / k!
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 9 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>xs0)α!.»÷
 </code></pre>
 <p>Inputs in the order <span class="math-container">\$n,k\$</span>.</p>
@@ -59,7 +71,7 @@
            # (which is output implicitly as result)  
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup><strike>12</strike> 9 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<div id="pu2" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup><strike>12</strike> 9 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <p>It takes <code>n</code> and <code>k</code> as its left and right arguments, respectively, then outputs the coefficient of <span class="math-container">\$x^k\$</span> in the <span class="math-container">\$n\$</span>-th approximant.
 It calculates <span class="math-container">\$\frac{n!}{k!}\cdot{2n-k\choose n-k} = \frac{n!}{k!}\cdot\frac{(2n-k)!}{n!(n-k)!} = \frac{(2n-k)!}{k!(n-k)!}\$</span>.</p>
 <pre><code>÷⍥!×-!⊣+-
@@ -72,19 +84,6 @@ It calculates <span class="math-container">\$\frac{n!}{k!}\cdot{2n-k\choose n-k}
 </code></pre>
 <p><a href="https://razetime.github.io/APLgolf/?h=C3nUNqH6Ue8uIPWoa/Gj7pZHXc0gvo66grrOo96ttfpAjgKQAUQgSv1R2yR1DYjYLjDaqlmroAAA&amp;c=O7z9Ue9SxcPTdRUfdS3W1gUA&amp;f=K1F41DZBIU0hREE9TZ3rUdtEICp51LP/0IpD6w21H/XueNQxQ@9R59JHvSse9W62BAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
 <p><a href="https://razetime.github.io/APLgolf/?h=C3nUNqH6Ue8uIPWoa/Gj7pZHXc0gvo66grrOo96ttfpAjgKQAUQgSv1R2yR1DYjYLjDaqlmroAAA&amp;c=01B81LVYW1fz8Hbdw9Mf9S4FchcBAA&amp;f=K1F41DZBIU0hREE9TZ3rUdtEICp51LP/0IpD6w21H/XueNQxQ@9R59JHvSse9W62BAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf! 12 bytes</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 9 bytes</h1>
-<pre><code>0&quot;$-+p¡ƒ/
-</code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCIwXCIkLStwwqHGki8iLCIiLCI0XG4zIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
-<p>Getting the inputs to work nicely was annoying, and it's likely that there's a byte to be shaved here (I wish vysearch was a thing). Same formula as everyone else.</p>
-<pre><code>0&quot;        # [n, 0]
-  $-      # [n-k, -k]
-    +     # [2n-k,n-k]
-     p    # [2n-k,n-k,k]
-      ¡   # Factorial of each
-       ƒ/ # (2n-k)! / (n-k)! / k!
-</code></pre>
 </div>
 <div id="pu3" class="pu"><h1>JavaScript (ES6), 44 bytes</h1>
 <p>Expects <code>(n)(k)</code> and returns the corresponding coefficient.</p>
