--- a/q/275906.html
+++ b/q/275906.html
@@ -26,15 +26,23 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>182</td><td>Bash</td><td>241003T155715Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275923#275923">Themooni</a></td></tr>
-<tr d-ix="1"><td>150</td><td>Python 3</td><td>241003T121136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275918#275918">Jitse</a></td></tr>
+<tr d-ix="0"><td>142</td><td>Python 3</td><td>241003T121136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275918#275918">Jitse</a></td></tr>
+<tr d-ix="1"><td>182</td><td>Bash</td><td>241003T155715Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275923#275923">Themooni</a></td></tr>
 <tr d-ix="2"><td>102</td><td>JavaScript ES6</td><td>241003T205800Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275931#275931">Arnauld</a></td></tr>
 <tr d-ix="3"><td>025</td><td>Vyxal</td><td>241004T001655Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275933#275933">lyxal</a></td></tr>
 <tr d-ix="4"><td>007</td><td>Charcoal</td><td>241002T215157Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275907#275907">Neil</a></td></tr>
 <tr d-ix="5"><td>017</td><td>Jelly</td><td>241003T150222Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275921#275921">Unrelate</a></td></tr>
 <tr d-ix="6"><td>003</td><td>05AB1E</td><td>241003T095245Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275916#275916">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 182 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 142 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>f=lambda x,s,p={},c=0,S=sorted:s and f(x[1:]+[c.real,c.imag],s[1:],{**p,c:s[0]},c+x[0])or[[p.get(i+j*1j,' ')for j in S({*x})]for i in S({*x})]
+</code></pre>
+<p><a href="https://tio.run/##lVNNb4MwDL33V3i9kEDoinZD4lf0MglxyGjKgiigJNuY2v52FvPVUrpDQcRPL/aznZj613xW5VvbHqKCHz/2HBqmWR2dLiyNtmwX6UoZsQ818HIPB9LEQZh4cbpRghcs3cgjzxKmkWUn161ZGup4m9hor7GWViqO600mDJFe7gY5c8Chh0pBDrKEHTm5zYUmSMhbojVCGw0RkBUAiYkfeEFOGfwLEgZrjs@asnmIzQlkxAj9IW47go5BgSo1PKvKl1EDQ4Ne4c6gtzZcqpRrsUj5BOiEoHtnWW8@P@i/m4oHEAyVVN9C/ShpZJk9FJk3vjyAe3DNOBY7xNyqLjexFM/3vbP32pl3NHY5Xw9ofuZ3WSblSXi6tefqn@SXYGxt3t4CXBvtLqiWihePV@yNrlY4wQ2z12iHuJvd0HashP4qjJ1i@98wTS2DboUsBbr1uyHUSpaGuEhbAVFHjoOuPU3bPw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>-42 bytes thanks to UnrelatedString</p>
+<p>Takes complex numbers as input and returns a (square) 2D array of characters with loads of whitespace</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 182 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>s=&quot;$1&quot;
 e='echo -en'
 shift
@@ -64,14 +72,6 @@ let i++
 <p><a href="https://i.sstatic.net/ZXnsBVmS.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/ZXnsBVmS.png" alt="s s s s test case" /></a>
 <a href="https://i.sstatic.net/zxv2eB5n.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/zxv2eB5n.png" alt="overwriting test case" /></a>
 <a href="https://i.sstatic.net/Jpkt8GJ2.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/Jpkt8GJ2.png" alt="octagon! test case" /></a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 150 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>f=lambda x,s,p={},c=0,*y,S=sorted:s and f(x[1:]+[c.real],s[1:],{**p,c:s[0]},c+x[0],*y,c.imag)or[[p.get(i+j*1j,' ')for j in S({*y})]for i in S({0,*x})]
-</code></pre>
-<p><a href="https://tio.run/##lVPNboMwDL73KbxeSCB0Rbsh8RS9TEIcMpqyIAooyTaqts/OYv5aynYoKPGHY3/@ialP5rMq39r2EBX8@LHn0DDN6uh8ZWm0Ze6J7SJdKSP2oQZe7uFAmjgIEy9ON0rwImEaP9nZdWuWhjreJtbTa6xE53QjjzyjlYrjepMJQ6SXu0HOHHDooVKQgyxhR87u6UoTVMhBYUM3VtUaoY2GCMgKgMTED7wgpwz@BQmDNcdnTdncxUYFMmKE/uC3HUGnQYIqNTyrypeRA12DnuFBoLU2XKqUa7EI@QToiKB7Z1Hvlh/06y7jAQRDJtW3UD9KGllmf5LMC1824BHcIo7JDj73rMtDTMXzfe/ivXbiHYXdLrcGzXv@EGVinoinW3su/4l@CcbS5uUtwK3Q7oJqqXjx94610dUKZ7hh9hrtGHezG9qKldBfhbFTbH8epqnVoFkhS4Fm/WkItZKlIS6qLYGoI8dB015N218" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-<p>-42 bytes thanks to UnrelatedString</p>
-<p>Takes complex numbers as input and returns a 2D array of characters</p>
 </div>
 <div id="pu2" class="pu"><h1>JavaScript (ES6), 102 bytes</h1>
 <p>Expects <code>(directions)(characters)</code>, where <em>directions</em> is an array of <code>[dx,dy]</code> vectors and <em>characters</em> is a string. Returns a matrix of characters.</p>
